2009-10-26  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Tor Arne Vestbø.

        http/tests/cookies/simple-cookies-max-age.html moved to flakey tests group.
        http/tests/xmlhttprequest/workers/close.html added to flakey tests group.

        * platform/qt/Skipped: 

2009-10-26  Csaba Osztrogonác  <ossy@webkit.org>

        Unreviewed trivial fix for r49854.

        * platform/qt/Skipped: Missing html extension added.

2009-10-26  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Gustavo Noronha.

        [Gtk] Reenable mod_rewrite in Fedora's httpd.conf
        https://bugs.webkit.org/show_bug.cgi?id=30741

        * http/conf/fedora-httpd.conf:

2009-10-25  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Unreviewed. Rebaseline test after 49998.

        * platform/gtk/fast/dom/prototype-inheritance-2-expected.txt:

2009-10-25  Hironori Bono  <hbono@chromium.org>

        Reviewed by Darin Adler.

        A quick fix for Bug 29103.
        Since String::startsWith() cannot fold non-ASCII characters, this change folds the prefix string
        and the option string before calling String::startsWith().
        https://bugs.webkit.org/show_bug.cgi?id=29103

        * fast/forms/listbox-typeahead-cyrillic-expected.txt: Added.
        * fast/forms/listbox-typeahead-cyrillic.html: Added.
        * fast/forms/listbox-typeahead-greek-expected.txt: Added.
        * fast/forms/listbox-typeahead-greek.html: Added.

2009-10-25  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Update tests for https://bugs.webkit.org/show_bug.cgi?id=30751
        HTMLOptionsCollection should not inherit from HTMLCollection

        * fast/dom/wrapper-classes-expected.txt:

2009-10-24  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Missing images at 350.org due to wrong URLs
        https://bugs.webkit.org/show_bug.cgi?id=30748
